# ai-template

./: .gitignore  README.md  pyproject.toml
experiment/: __init__.py  cli.py  model.py  train.py
slurm/: aiai_slurm_template.sbatch
